force-app/main/default/objects/Compliance__c/fields/Form_Year_Final__c.field-meta.xml
<CustomField>
    <fullName>Form_Year_Final__c</fullName>
    <description>Merge field to confirm year the final 5500 is for in email templates</description>
    <inlineHelpText>Merge field to confirm year the final 5500 is for in email templates</inlineHelpText>
    <label>Form Year Final</label>
    <length>4</length>
    <type>Text</type>
</CustomField>