force-app/main/default/objects/Compliance__c/fields/Fraud_or_dishonesty_loss_10d__c.field-meta.xml
<CustomField>
    <fullName>Fraud_or_dishonesty_loss_10d__c</fullName>
    <description>Did the plan have a loss, whether or not reimbursed by the plan&apos;s fidelity bond, that was caused by fraud or dishonesty?</description>
    <inlineHelpText>Did the plan have a loss, whether or not reimbursed by the plan&apos;s fidelity bond, that was caused by fraud or dishonesty?</inlineHelpText>
    <label>Fraud or Dishonesty Loss (10d)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>