force-app/main/default/objects/Compliance__c/fields/HCE_ADP_Non_Excludable__c.field-meta.xml
<CustomField>
    <fullName>HCE_ADP_Non_Excludable__c</fullName>
    <label>HCE ADP Non-Excludable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>