force-app/main/default/objects/Compliance__c/fields/Initial_Audit_Email__c.field-meta.xml
<CustomField>
    <fullName>Initial_Audit_Email__c</fullName>
    <label>Initial Audit Email</label>
    <type>Date</type>
</CustomField>