force-app/main/default/objects/Compliance__c/fields/Initial_Notice_Sent__c.field-meta.xml
<CustomField>
    <fullName>Initial_Notice_Sent__c</fullName>
    <description>Date initial notification email was sent</description>
    <inlineHelpText>Date initial notification email was sent</inlineHelpText>
    <label>Initial Notice Sent</label>
    <type>Date</type>
</CustomField>