force-app/main/default/objects/Compliance__c/fields/InitialFilingInd__c.field-meta.xml
<CustomField>
    <fullName>InitialFilingInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Initial filing if it&apos;s the first plan year</description>
    <label>InitialFilingInd</label>
    <type>Checkbox</type>
</CustomField>