force-app/main/default/objects/Compliance__c/fields/Invitation_to_File_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invitation_to_File_Sent__c</fullName>
    <description>Initial invitation to file with ASC link sent to contacts</description>
    <inlineHelpText>Initial invitation to file with ASC link sent to contacts</inlineHelpText>
    <label>Invitation to File Sent</label>
    <type>Date</type>
</CustomField>