force-app/main/default/objects/Compliance__c/fields/Late_contributions_10a__c.field-meta.xml
<CustomField>
    <fullName>Late_contributions_10a__c</fullName>
    <description>Was there a failure to transmit to the plan any participant contributions within the time period described in 29 CFR 2510.3-102?</description>
    <inlineHelpText>Was there a failure to transmit to the plan any participant contributions within the time period described in 29 CFR 2510.3-102?</inlineHelpText>
    <label>Late Contributions (10a)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>