force-app/main/default/objects/Compliance__c/fields/Late_Deferral_Amount__c.field-meta.xml
<CustomField>
    <fullName>Late_Deferral_Amount__c</fullName>
    <description>Total amount of late deferrals for plan year</description>
    <inlineHelpText>Total amount of late deferrals for plan year</inlineHelpText>
    <label>Late Deferral Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>