force-app/main/default/objects/Compliance__c/fields/M_P_Letter_Date_17c__c.field-meta.xml
<CustomField>
    <fullName>M_P_Letter_Date_17c__c</fullName>
    <description>If the plan sponsor is an adopter of a pre-approved master and prototype (M&amp;P) or volume submitter plan that is subject to a favorable IRS opinion or advisory letter, enter the date of that favorable letter</description>
    <inlineHelpText>If the plan sponsor is an adopter of a pre-approved master and prototype (M&amp;P) or volume submitter plan that is subject to a favorable IRS opinion or advisory letter, enter the date of that favorable letter</inlineHelpText>
    <label>M&amp;P Letter Date (17c)</label>
    <type>Date</type>
</CustomField>