force-app/main/default/objects/Compliance__c/fields/M_P_Letter_Serial_Number_17c__c.field-meta.xml
<CustomField>
    <fullName>M_P_Letter_Serial_Number_17c__c</fullName>
    <description>If the plan sponsor is an adopter of a pre-approved master and prototype (M&amp;P) or volume submitter plan that is subject to a favorable IRS opinion or advisory letter, enter the letter&apos;s serial number.</description>
    <inlineHelpText>If the plan sponsor is an adopter of a pre-approved master and prototype (M&amp;P) or volume submitter plan that is subject to a favorable IRS opinion or advisory letter, enter the letter&apos;s serial number.</inlineHelpText>
    <label>M&amp;P Letter Serial Number (17c)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>