force-app/main/default/objects/Compliance__c/fields/Net_Income_loss_8i__c.field-meta.xml
<CustomField>
    <fullName>Net_Income_loss_8i__c</fullName>
    <description>Net income (loss) (subtract 8h from 8c)</description>
    <formula>Total_expenses_8h__c -  Total_income_8c__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net income (loss) (subtract 8h from 8c)</inlineHelpText>
    <label>Net Income (Loss) (8i)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>