force-app/main/default/objects/Compliance__c/fields/Net_plan_assets_beginning_of_year_7c__c.field-meta.xml
<CustomField>
    <fullName>Net_plan_assets_beginning_of_year_7c__c</fullName>
    <description>Net plan assets (7a - 7b)</description>
    <formula>Total_Plan_Assets_Beginning_of_Year_7a__c - Total_Plan_Liabilities_Beg_of_Year_7b__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Net plan assets (7a - 7b)</inlineHelpText>
    <label>Net Plan Assets Beginning of Year(7c)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>