force-app/main/default/objects/Compliance__c/fields/Net_Plan_Assets_End_of_Year_7c__c.field-meta.xml
<CustomField>
    <fullName>Net_Plan_Assets_End_of_Year_7c__c</fullName>
    <formula>Total_Plan_Assets_End_of_Year_7a__c -  Total_Plan_Liabilities_End_of_Year_7b__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Plan Assets End of Year (7c)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>