force-app/main/default/objects/Compliance__c/fields/NHCE_ADP_Excludable__c.field-meta.xml
<CustomField>
    <fullName>NHCE_ADP_Excludable__c</fullName>
    <label>NHCE ADP Excludable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>