force-app/main/default/objects/Compliance__c/fields/No_Active_Participants_at_End_PY_5d1__c.field-meta.xml
<CustomField>
    <fullName>No_Active_Participants_at_End_PY_5d1__c</fullName>
    <description>Total number of active participants at the beginning of the plan year</description>
    <inlineHelpText>Total number of active participants at the beginning of the plan year</inlineHelpText>
    <label>No. Active Participants at End PY (5d1)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>