force-app/main/default/objects/Compliance__c/fields/Non_Excludable_ADP_P_F__c.field-meta.xml
<CustomField>
    <fullName>Non_Excludable_ADP_P_F__c</fullName>
    <label>Non-Excludable ADP P/F</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PASS</fullName>
            </value>
            <value>
                <fullName>FAIL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>