force-app/main/default/objects/Compliance__c/fields/Nonexempt_transactions_10b__c.field-meta.xml
<CustomField>
    <fullName>Nonexempt_transactions_10b__c</fullName>
    <description>Were there any nonexempt transactions with any party-in-interest (do not include transactions from 10a)</description>
    <inlineHelpText>Were there any nonexempt transactions with any party-in-interest (do not include transactions from 10a)</inlineHelpText>
    <label>Nonexempt transactions (10b)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>