force-app/main/default/objects/Compliance__c/fields/Original_Plan_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Plan_Effective_Date__c</fullName>
    <formula>Plan__r.Original_Plan_Effective_Date__c</formula>
    <label>Original Plan Effective Date</label>
    <type>Date</type>
</CustomField>