force-app/main/default/objects/Compliance__c/fields/Other_expenses_8g__c.field-meta.xml
<CustomField>
    <fullName>Other_expenses_8g__c</fullName>
    <description>Other expenses</description>
    <inlineHelpText>Other expenses</inlineHelpText>
    <label>Other expenses (8g)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>