force-app/main/default/objects/Compliance__c/fields/Other_income_loss_8b__c.field-meta.xml
<CustomField>
    <fullName>Other_income_loss_8b__c</fullName>
    <description>Other income (loss)</description>
    <inlineHelpText>Other income (loss)</inlineHelpText>
    <label>Other income (loss) (8b)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>