force-app/main/default/objects/Compliance__c/fields/PartcpAccountBalCnt__c.field-meta.xml
<CustomField>
    <fullName>PartcpAccountBalCnt__c</fullName>
    <description>Number of participants with an account balance on 12/31</description>
    <inlineHelpText>Number of participants with an account balance on 12/31</inlineHelpText>
    <label>PartcpAccountBalCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>