force-app/main/default/objects/Compliance__c/fields/Participant_loans_10g__c.field-meta.xml
<CustomField>
    <fullName>Participant_loans_10g__c</fullName>
    <description>Did the plan have any participant loans? (If yes, enter amount as of year end)</description>
    <inlineHelpText>Did the plan have any participant loans? (If yes, enter amount as of year end)</inlineHelpText>
    <label>Participant loans (10g)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>