force-app/main/default/objects/Compliance__c/fields/Participants_at_Start_of_Year__c.field-meta.xml
<CustomField>
    <fullName>Participants_at_Start_of_Year__c</fullName>
    <description>Total number of participants at the beginning of the plan year</description>
    <inlineHelpText>Total number of participants at the beginning of the plan year</inlineHelpText>
    <label>Participants at Start of Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>