force-app/main/default/objects/Compliance__c/fields/PBGC__c.field-meta.xml
<CustomField>
    <fullName>PBGC__c</fullName>
    <description>Were all the plan assets distributed to participants or beneficiaries, transferred to another plan, or brought under the control of the PBGC?</description>
    <inlineHelpText>Were all the plan assets distributed to participants or beneficiaries, transferred to another plan, or brought under the control of the PBGC?</inlineHelpText>
    <label>Assets Distributed or Transferred (13b)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>