force-app/main/default/objects/Compliance__c/fields/Pl__c.field-meta.xml
<CustomField>
    <fullName>Pl__c</fullName>
    <description>Is the Plan maintained in a U.S. territory (i.e., Puerto Rico (if no election under ERISA section 1022(i)(2) has been made), American Samoa, Guam, the Commonwealth of the Northern Mariana Islands or the U.S. Virgin Islands)?.</description>
    <inlineHelpText>Is the Plan maintained in a U.S. territory (i.e., Puerto Rico (if no election under ERISA section 1022(i)(2) has been made), American Samoa, Guam, the Commonwealth of the Northern Mariana Islands or the U.S. Virgin Islands)?.</inlineHelpText>
    <label>Plan in U.S. Territory (18)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>