force-app/main/default/objects/Compliance__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Plan Document is associated with</description>
    <inlineHelpText>Plan Document is associated with</inlineHelpText>
    <label>Plan</label>
    <referenceTo>Plan__c</referenceTo>
    <relationshipName>Compliance_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>