force-app/main/default/objects/Compliance__c/fields/Plan_Amendment_Code_17b__c.field-meta.xml
<CustomField>
    <fullName>Plan_Amendment_Code_17b__c</fullName>
    <description>Enter the applicable code for last plan amendment/restatement for the required tax law changes</description>
    <inlineHelpText>Enter the applicable code for last plan amendment/restatement for the required tax law changes</inlineHelpText>
    <label>Plan Amendment Code (17b)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>