force-app/main/default/objects/Compliance__c/fields/Plan_assets__c.field-meta.xml
<CustomField>
    <fullName>Plan_assets__c</fullName>
    <description>All plan assets during the plan year were invested in eligible assets</description>
    <inlineHelpText>All plan assets during the plan year were invested in eligible assets.</inlineHelpText>
    <label>Plan assets invested (6a)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>