force-app/main/default/objects/Compliance__c/fields/Plan_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Plan_Characteristics__c</fullName>
    <description>If Custom(K) is true:
2E   2F   2G   2J   2K   2T   3D
If Custom(K) is true AND New Comp is true:
2A   2E   2F   2G   2J   2K   2T   3D 
If Custom(K) is true AND PCRAs are true:
2E   2F   2G   2J   2K   2R   2T   3D
If Custom(K) is true AND New Comp is true AND PCRAs are true:
2A   2E   2F   2G   2J   2K   2R   2T   3D
If Express(K) is true:
2E   2F   2G   2J   2T   3D</description>
    <inlineHelpText>If Custom(K) is true:
2E   2F   2G   2J   2K   2T   3D
If Custom(K) is true AND New Comp is true:
2A   2E   2F   2G   2J   2K   2T   3D 
If Custom(K) is true AND PCRAs are true:
2E   2F   2G   2J   2K   2R   2T   3D
If Custom(K) is true AND New Comp</inlineHelpText>
    <label>Plan Characteristics (9a)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2E   2F   2G   2J   2K   2T   3D</fullName>
            </value>
            <value>
                <fullName>2A   2E   2F   2G   2J   2K   2T   3D</fullName>
            </value>
            <value>
                <fullName>2E   2F   2G   2J   2K   2R   2T   3D</fullName>
            </value>
            <value>
                <fullName>2A   2E   2F   2G   2J   2K   2R   2T   3D</fullName>
            </value>
            <value>
                <fullName>2E   2F   2G   2J   2T   3D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>