force-app/main/default/objects/Compliance__c/fields/Plan_Fidelity_Bond_Amount__c.field-meta.xml
<CustomField>
    <fullName>Plan_Fidelity_Bond_Amount__c</fullName>
    <description>If the plan has a Fidelity Bond, enter amount.</description>
    <inlineHelpText>If the plan has a Fidelity Bond, enter amount.</inlineHelpText>
    <label>Plan Fidelity Bond Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>