force-app/main/default/objects/Compliance__c/fields/Plan_Id_18_Char__c.field-meta.xml
<CustomField>
    <fullName>Plan_Id_18_Char__c</fullName>
    <formula>Plan__r.Plan_ID_18_Char__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Id (18 Char)</label>
    <type>Text</type>
</CustomField>