force-app/main/default/objects/Compliance__c/fields/Plan_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Number__c</fullName>
    <formula>Plan__r.Plan_Number__c</formula>
    <label>Plan Number</label>
    <type>Text</type>
</CustomField>