force-app/main/default/objects/Compliance__c/fields/Plan_Sponsor_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Plan_Sponsor_Phone_Number__c</fullName>
    <formula>Primary_Plan_Sponsor__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plan Sponsor Phone Number</label>
    <type>Text</type>
</CustomField>