force-app/main/default/objects/Compliance__c/fields/Plan_termination_resolution_13a__c.field-meta.xml
<CustomField>
    <fullName>Plan_termination_resolution_13a__c</fullName>
    <description>Has a resolution to terminate the plan been adopted in any plan year?</description>
    <inlineHelpText>Has a resolution to terminate the plan been adopted in any plan year?</inlineHelpText>
    <label>Plan termination resolution (13a)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>