force-app/main/default/objects/Compliance__c/fields/Plan_Year_End__c.field-meta.xml
<CustomField>
    <fullName>Plan_Year_End__c</fullName>
    <description>Date of Plan Year End for Prior Year 5500</description>
    <inlineHelpText>Date of Plan Year End for Prior Year 5500</inlineHelpText>
    <label>Plan Year End</label>
    <type>Date</type>
</CustomField>