force-app/main/default/objects/Compliance__c/fields/Plan_Year_End_Final__c.field-meta.xml
<CustomField>
    <fullName>Plan_Year_End_Final__c</fullName>
    <description>Plan Year End for Final 5500</description>
    <inlineHelpText>Plan Year End for Final 5500</inlineHelpText>
    <label>Plan Year End - Final</label>
    <type>Date</type>
</CustomField>