force-app/main/default/objects/Compliance__c/fields/Primary_Plan_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Primary_Plan_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who is the primary Plan sponsor on the plan?</description>
    <inlineHelpText>Who is the primary Plan sponsor on the plan?</inlineHelpText>
    <label>Primary Plan Sponsor</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Compliance_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>