force-app/main/default/objects/Compliance__c/fields/Primary_Plan_Sponsor_Email__c.field-meta.xml
<CustomField>
    <fullName>Primary_Plan_Sponsor_Email__c</fullName>
    <label>Primary Plan Sponsor Email</label>
    <type>Email</type>
</CustomField>