force-app/main/default/objects/Compliance__c/fields/QNEC_Contributions__c.field-meta.xml
<CustomField>
    <fullName>QNEC_Contributions__c</fullName>
    <label>QNEC Contributions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>