force-app/main/default/objects/Compliance__c/fields/QNEC_Funded_Date__c.field-meta.xml
<CustomField>
    <fullName>QNEC_Funded_Date__c</fullName>
    <description>Date QNEC is Funded</description>
    <inlineHelpText>Date QNEC is Funded</inlineHelpText>
    <label>QNEC Funded Date</label>
    <type>Date</type>
</CustomField>