force-app/main/default/objects/Compliance__c/fields/Refund_Calc_Box_Link__c.field-meta.xml
<CustomField>
    <fullName>Refund_Calc_Box_Link__c</fullName>
    <description>Link to refund calculation in Box.com</description>
    <inlineHelpText>Link to refund calculation in Box.com</inlineHelpText>
    <label>Refund Calc Box Link</label>
    <type>Url</type>
</CustomField>