force-app/main/default/objects/Compliance__c/fields/Refunds_Processed__c.field-meta.xml
<CustomField>
    <fullName>Refunds_Processed__c</fullName>
    <label>Refunds Processed</label>
    <type>Date</type>
</CustomField>