force-app/main/default/objects/Compliance__c/fields/ResTermPlanAdptAmt__c.field-meta.xml
<CustomField>
    <fullName>ResTermPlanAdptAmt__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the plan had a resolution to terminate, did any amount go back to the employer?</description>
    <inlineHelpText>If the plan had a resolution to terminate, did any amount go back to the employer?</inlineHelpText>
    <label>ResTermPlanAdptAmt</label>
    <type>Checkbox</type>
</CustomField>