force-app/main/default/objects/Compliance__c/fields/Restructure_Method__c.field-meta.xml
<CustomField>
    <fullName>Restructure_Method__c</fullName>
    <label>Restructure Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DISAGGREGATED</fullName>
            </value>
            <value>
                <fullName>NON-DISAGGREGATED</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>