force-app/main/default/objects/Compliance__c/fields/Safe_Harbor__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor__c</fullName>
    <label>Safe Harbor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>