force-app/main/default/objects/Compliance__c/fields/Safe_Harbor_Formula__c.field-meta.xml
<CustomField>
    <fullName>Safe_Harbor_Formula__c</fullName>
    <description>Safe Harbor formula for plan year</description>
    <inlineHelpText>Safe Harbor formula for plan year</inlineHelpText>
    <label>Safe Harbor Formula</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SafeHarbor 3.5% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor 4% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor 3% Non-Elective</fullName>
            </value>
            <value>
                <fullName>SafeHarbor 4% Non-Elective</fullName>
            </value>
            <value>
                <fullName>SafeHarbor 5% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor 6% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor Basic Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor QACA Basic Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor QACA 100% up to 1% - 50% up to 6%</fullName>
            </value>
            <value>
                <fullName>SafeHarbor QACA 3% Non-Elective</fullName>
            </value>
            <value>
                <fullName>SafeHarbor QACA 3.5% Enhanced Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor QACA 4% Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor QACA 5% Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor QACA 6% Match</fullName>
            </value>
            <value>
                <fullName>SafeHarbor 3% - 7% Enhanced</fullName>
            </value>
            <value>
                <fullName>SafeHarbor 4% Enhanced</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>