force-app/main/default/objects/Compliance__c/fields/SAR_1_Date__c.field-meta.xml
<CustomField>
    <fullName>SAR_1_Date__c</fullName>
    <description>Date Summary Annual Report Email 1 was sent</description>
    <inlineHelpText>Date Summary Annual Report Email 1 was sent</inlineHelpText>
    <label>SAR #1 Date</label>
    <type>Date</type>
</CustomField>