force-app/main/default/objects/Compliance__c/fields/SAR_2_Date__c.field-meta.xml
<CustomField>
    <fullName>SAR_2_Date__c</fullName>
    <description>Date Summary Annual Report Email 2 was sent</description>
    <inlineHelpText>Date Summary Annual Report Email 2 was sent</inlineHelpText>
    <label>SAR #2 Date</label>
    <type>Date</type>
</CustomField>