force-app/main/default/objects/Compliance__c/fields/Saver_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Saver_Addresses__c</fullName>
    <label>Saver Addresses</label>
    <length>16384</length>
    <type>LongTextArea</type>
</CustomField>