force-app/main/default/objects/Compliance__c/fields/SepPartcpPardIVVstdCnt__c.field-meta.xml
<CustomField>
    <fullName>SepPartcpPardIVVstdCnt__c</fullName>
    <description>Separated participants not 100% vested</description>
    <label>SepPartcpPardIVVstdCnt</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>