force-app/main/default/objects/Compliance__c/fields/ShortPlanYrInd__c.field-meta.xml
<CustomField>
    <fullName>ShortPlanYrInd__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if plan is on a short plan year</description>
    <label>ShortPlanYrInd</label>
    <type>Checkbox</type>
</CustomField>