force-app/main/default/objects/Compliance__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <description>Name of Sponsor of the Plan</description>
    <inlineHelpText>Name of Sponsor of the Plan</inlineHelpText>
    <label>Sponsor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>