force-app/main/default/objects/Compliance__c/fields/Sponsor_Email_2__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Email_2__c</fullName>
    <label>Sponsor Email 2</label>
    <type>Email</type>
</CustomField>