force-app/main/default/objects/Compliance__c/fields/Sponsor_Email_3__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Email_3__c</fullName>
    <label>Sponsor Email 3</label>
    <type>Email</type>
</CustomField>