force-app/main/default/objects/Compliance__c/fields/Sponsor_Email_4__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Email_4__c</fullName>
    <label>Sponsor Email 4</label>
    <type>Email</type>
</CustomField>