force-app/main/default/objects/Compliance__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Started</fullName>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Testing Complete - Action Required</fullName>
            </value>
            <value>
                <fullName>Testing Complete - No Action Required</fullName>
            </value>
            <value>
                <fullName>Testing Complete - Corrective Measures Taken</fullName>
            </value>
            <value>
                <fullName>Test Complete and Available</fullName>
            </value>
            <value>
                <fullName>Not Top Heavy</fullName>
            </value>
            <value>
                <fullName>Top Heavy</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Deemed</fullName>
            </value>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Invitation to File Sent</fullName>
            </value>
            <value>
                <fullName>Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Filed</fullName>
            </value>
            <value>
                <fullName>Delivered to Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>