force-app/main/default/objects/Compliance__c/fields/Status_Final__c.field-meta.xml
<CustomField>
    <fullName>Status_Final__c</fullName>
    <description>Final Year 5500 Status</description>
    <inlineHelpText>Final Year 5500 Status</inlineHelpText>
    <label>Status_Final</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invitation to File Sent</fullName>
            </value>
            <value>
                <fullName>Reminder Sent</fullName>
            </value>
            <value>
                <fullName>Filed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>