force-app/main/default/objects/Compliance__c/fields/Submission_Type__c.field-meta.xml
<CustomField>
    <fullName>Submission_Type__c</fullName>
    <description>How was the census submitted?</description>
    <inlineHelpText>How was the census submitted?</inlineHelpText>
    <label>Submission Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sponsor Submission</fullName>
            </value>
            <value>
                <fullName>Batch Submission</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>