force-app/main/default/objects/Compliance__c/fields/Tax_Law_Amends_17a__c.field-meta.xml
<CustomField>
    <fullName>Tax_Law_Amends_17a__c</fullName>
    <description>Has the plan been timely amended for all required tax law changes?.</description>
    <inlineHelpText>Has the plan been timely amended for all required tax law changes?.</inlineHelpText>
    <label>Tax Law Amends (17a)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>